PPL-Sources/PPL-FE/src/test/resources/CoCos/Invalid/DimensionToSmallCoCo2.par
DimensionToSmallCoCo2 {


seq main() : Void {

    var [[Int]] f = init_List([2,3])
    f[1][1][1] = 0
}


}